[package]
name = "pallet-asset-registry"
version = "0.0.1"
description = "Trappist pallet for XCM Asset Registry."
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking = { workspace = true,  optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

xcm = { workspace = true }

xcm-primitives = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }

xcm = { workspace = true }
xcm-simulator = { workspace = true }
xcm-executor = { workspace = true }
xcm-builder = { workspace = true }
pallet-xcm = { workspace = true }
polkadot-core-primitives = { workspace = true }
polkadot-runtime-parachains = { workspace = true }
polkadot-parachain-primitives = { workspace = true }

parachain-info = { workspace = true }
parachains-common = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-core = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"xcm-primitives/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"pallet-xcm/std",
	"polkadot-core-primitives/std",
	"polkadot-runtime-parachains/std",
	"polkadot-parachain-primitives/std",
	"parachain-info/std",
	"parachains-common/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
