[package]
name = "trappist-runtime-benchmarks"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] , version = "3.6.4" }
scale-info = { workspace = true , version = "2.9.0" }
sp-runtime = { workspace = true , version = "26.0.0" }
sp-std = { workspace = true , version = "10.0.0" }
frame-benchmarking = { workspace = true , version = "23.0.0" }
frame-support = { workspace = true , version = "23.0.0" }
frame-system = { workspace = true , version = "23.0.0" }

xcm = { workspace = true }
xcm-executor = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true , version = "23.0.0" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-executor/std"
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
