[package]
name = "pallet-lockdown-mode"
version = "0.1.0"
description = "Trappist pallet for setting lockdown mode."
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = [ "derive" ] , version = "3.6.4" }
scale-info = { workspace = true , version = "2.9.0" }
sp-runtime = { workspace = true , version = "26.0.0" }
sp-std = { workspace = true , version = "10.0.0" }
frame-benchmarking = { workspace = true , version = "23.0.0" }
frame-support = { workspace = true , version = "23.0.0" }
frame-system = { workspace = true , version = "23.0.0" }

cumulus-primitives-core = { workspace = true , version = "0.2.0" }
pallet-assets = { workspace = true , version = "24.0.0" }
pallet-balances = { workspace = true , version = "23.0.0" }
log = { workspace = true , version = "0.4.20" }
xcm = { workspace = true }

xcm-primitives = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true , version = "23.0.0" }
sp-io = { workspace = true , version = "25.0.0" }
sp-runtime = { workspace = true , version = "26.0.0" }
pallet-remark = { workspace = true , version = "23.0.0" }


xcm = { workspace = true }
xcm-simulator = { workspace = true , version = "2.0.0" }
xcm-executor = { workspace = true }
xcm-builder = { workspace = true }
pallet-xcm = { workspace = true , version = "2.0.0" }
polkadot-core-primitives = { workspace = true , version = "2.0.0" }
polkadot-runtime-parachains = { workspace = true , version = "2.0.0" }
polkadot-parachain-primitives = { workspace = true , version = "1.0.0" }

parachain-info = { workspace = true }
parachains-common = { workspace = true , version = "2.0.0" }
cumulus-pallet-dmp-queue = { workspace = true , version = "0.2.0" }
cumulus-pallet-xcmp-queue = { workspace = true , version = "0.2.0" }
cumulus-primitives-core = { workspace = true , version = "0.2.0" }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"xcm-primitives/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"pallet-xcm/std",
	"polkadot-core-primitives/std",
	"polkadot-runtime-parachains/std",
	"polkadot-parachain-primitives/std",
	"parachain-info/std",
	"parachains-common/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
