[package]
name = "pallet-withdraw-teleport"
version = "0.1.0"
description = "Pallet for allowing to teleport funds by paying with a fee asset on destination."
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = [ "derive" ] , version = "3.6.4" }
scale-info = { workspace = true , version = "2.9.0" }
sp-runtime = { workspace = true , version = "26.0.0" }
sp-std = { workspace = true , version = "10.0.0" }
frame-benchmarking = { workspace = true , version = "23.0.0" }
frame-support = { workspace = true , version = "23.0.0" }
frame-system = { workspace = true , version = "23.0.0" }
pallet-xcm = { workspace = true , version = "2.0.0" }
xcm = { workspace = true }
xcm-executor = { workspace = true }
sp-io = { workspace = true , version = "25.0.0" }
log = { workspace = true , version = "0.4.20" }


[dev-dependencies]
sp-core = { workspace = true , version = "23.0.0" }
sp-io = { workspace = true , version = "25.0.0" }
sp-runtime = { workspace = true , version = "26.0.0" }
pallet-balances = { workspace = true , version = "23.0.0" }
xcm-builder = { workspace = true }
polkadot-parachain-primitives = { workspace = true , version = "1.0.0" }
polkadot-runtime-parachains = { workspace = true , version = "2.0.0" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"log/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
